Added new files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
  <body>
   <h2>Hello there!</h2>
   
-  <button>Lol</button>
+  <a href="files1.html">Files For System Modding</a>
  </body>
 </html>
