--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
  <body>
   <h2>Hello there!</h2>
   
-  <a href="files1">Files For System Modding</a>
+  <a href="files">Files For System Modding</a>
  </body>
 </html>
