--- a/files/index.html
+++ b/files/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="column" style="background-color:#bbb;">
         <h2><center>Switch</center></h2>
-        <p style="font-size:30px">Coming soon!</p>
+        <p style="font-size:30px">Coming soon...</p>
       </div>
     </div>
   
