Added home page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
  <head>
-  <title>Welcome!</title>
+  <title>Home Page</title>
  </head>
  
  <body>
-  <h2>Hello there!</h2>
-  
-  <a href="files">Files For System Modding</a>
+ 
+ <h2>swiftsharau.github.io</h2>
+ <hr>
+ <p style="font-size:30px">Hey. There is nothing to see here. You probably came for </p> <a style="font-size:30px" href="nintymodscene">This page.</a>
+ 
  </body>
 </html>
