--- a/nintymodscene/files/index.html
+++ b/nintymodscene/files/index.html
@@ -29,7 +29,7 @@
   
     <div class="row">
       <div class="column" style="background-color:#EAEAEA;">
-        <h2><center>3DS</center></h2>
+        <h2 style="font-size:27px"><center>3DS</center></h2>
         
           <a href="https://github.com/Steveice10/FBI/releases" style="font-size:30px">FBI</a>
           </br>
@@ -52,7 +52,7 @@
           <a href="https://github.com/LumaTeam/Luma3DS/releases" style="font-size:30px">Luma3DS</a>
       </div>
       <div class="column" style="background-color:#bbb;">
-        <h2><center>Switch</center></h2>
+        <h2 style="font-size:27px"><center>Switch</center></h2>
         <p style="font-size:30px">Coming soon...</p>
       </div>
     </div>
