Added switch files

--- a/nintymodscene/files/index.html
+++ b/nintymodscene/files/index.html
@@ -50,10 +50,46 @@
           </br>
           </br>
           <a href="https://github.com/LumaTeam/Luma3DS/releases" style="font-size:30px">Luma3DS</a>
+          </br>
+          </br>
+          <a href="https://github.com/mtheall/ftpd" style="font-size:30px">FTPD</a>
+          </br>
+          </br>
       </div>
-      <div class="column" style="background-color:#bbb;">
+      <div class="column" style="background-color:#E3E3E3;">
         <h2 style="font-size:27px"><center>Switch</center></h2>
-        <p style="font-size:30px">Coming soon...</p>
+        <a href="https://github.com/eliboa/TegraRcmGUI/releases" style="font-size:30px">TegraRcmGUI</a>
+        </br>
+        </br>
+        <a href="https://github.com/CTCaer/hekate/releases/" style="font-size:30px">Hekate</a>
+        </br>
+        </br>
+        <a href="https://github.com/suchmememanyskill/TegraExplorer/releases" style="font-size:30px">TegraExplorer</a>
+        </br>
+        </br>
+        <a href="https://github.com/Atmosphere-NX/Atmosphere/releases" style="font-size:30px">Atmosphere</a>
+        </br>
+        </br>
+        <a href="https://github.com/shchmue/Lockpick_RCM/releases" style="font-size:30px">Lockpick RCM</a>
+        </br>
+        </br>
+        <a href="https://github.com/mtheall/ftpd/releases" style="font-size:30px">FTPD</a>
+        </br>
+        </br>
+        <a href="https://github.com/J-D-K/JKSV/releases" style="font-size:30px">JKSV</a>
+        </br>
+        </br>
+        <a href="https://github.com/exelix11/SwitchThemeInjector/releases" style="font-size:30px">NXThemesInstaller</a>
+        </br>
+        </br>
+        <a href="https://github.com/joel16/NX-Shell/releases" style="font-size:30px">NX-Shell</a>
+        </br>
+        </br>
+        <a href="https://github.com/fortheusers/hb-appstore/releases" style="font-size:30px">Homebrew App Store</a>
+        </br>
+        </br>
+        
+        <!-- <p style="font-size:30px">Coming soon...</p> -->
       </div>
     </div>
   
