--- a/nintymodscene/index.html
+++ b/nintymodscene/index.html
@@ -4,8 +4,8 @@
  </head>
  
  <body>
-  <h2>Hello there!</h2>
+  <h2 style="font-size:30px">Hello there!</h2>
   
-  <a href="files">Files For System Modding</a>
+  <a style="font-size:30px" href="files">Files For System Modding</a>
  </body>
 </html>
