Sorted Out Stuff

--- a/nintymodscene/files/index.html
+++ b/nintymodscene/files/index.html
@@ -31,64 +31,84 @@
       <div class="column" style="background-color:#EAEAEA;">
         <h2 style="font-size:27px"><center>3DS</center></h2>
         
-          <a href="https://github.com/Steveice10/FBI/releases" style="font-size:30px">FBI</a>
-          </br>
-          </br>
-          <a href="https://universal-team.net/projects/universal-updater" style="font-size:30px">Universal Updater</a>
-          </br>
-          </br>
-          <a href="https://github.com/PabloMK7/homebrew_launcher_dummy/releases" style="font-size:30px">Homebrew Launcher</a>
-          </br>
-          </br>
-          <a href="https://github.com/astronautlevel2/Anemone3DS/releases/latest" style="font-size:30px">Anemone 3DS</a>
-          </br>
-          </br>
-          <a href="https://github.com/FlagBrew/Checkpoint/releases" style="font-size:30px">Checkpoint</a>
-          </br>
-          </br>
-          <a href="https://github.com/d0k3/GodMode9/releases" style="font-size:30px">GodMode9</a>
-          </br>
-          </br>
-          <a href="https://github.com/LumaTeam/Luma3DS/releases" style="font-size:30px">Luma3DS</a>
-          </br>
-          </br>
-          <a href="https://github.com/mtheall/ftpd" style="font-size:30px">FTPD</a>
-          </br>
-          </br>
+          <details>
+            <summary style="font-size:30px">Software Releases</summary>
+            </br>
+            <a href="https://github.com/Steveice10/FBI/releases" style="font-size:30px">FBI</a>
+            </br>
+            </br>
+            <a href="https://universal-team.net/projects/universal-updater" style="font-size:30px">Universal Updater</a>
+            </br>
+            </br>
+            <a href="https://github.com/PabloMK7/homebrew_launcher_dummy/releases" style="font-size:30px">Homebrew Launcher</a>
+            </br>
+            </br>
+            <a href="https://github.com/astronautlevel2/Anemone3DS/releases/latest" style="font-size:30px">Anemone 3DS</a>
+            </br>
+            </br>
+            <a href="https://github.com/FlagBrew/Checkpoint/releases" style="font-size:30px">Checkpoint</a>
+            </br>
+            </br>
+            <a href="https://github.com/d0k3/GodMode9/releases" style="font-size:30px">GodMode9</a>
+            </br>
+            </br>
+            <a href="https://github.com/LumaTeam/Luma3DS/releases" style="font-size:30px">Luma3DS</a>
+            </br>
+            </br>
+            <a href="https://github.com/mtheall/ftpd" style="font-size:30px">FTPD</a>
+            </br>
+            </br>
+            <a href="https://github.com/d0k3/SafeB9SInstaller/releases" style="font-size:30px">SafeB9SInstaller</a>
+            </br>
+            </br>
+            <a href="https://github.com/zoogie/unSAFE_MODE/releases" style="font-size:30px">unSAFE_MODE</a>
+            </br>
+            </br>
+            <a href="https://github.com/derrekr/fastboot3DS/releases" style="font-size:30px">fastboot3DS</a>
+            </br>
+            </br>
+          </details>
       </div>
       <div class="column" style="background-color:#E3E3E3;">
         <h2 style="font-size:27px"><center>Switch</center></h2>
-        <a href="https://github.com/eliboa/TegraRcmGUI/releases" style="font-size:30px">TegraRcmGUI</a>
-        </br>
-        </br>
-        <a href="https://github.com/CTCaer/hekate/releases/" style="font-size:30px">Hekate</a>
-        </br>
-        </br>
-        <a href="https://github.com/suchmememanyskill/TegraExplorer/releases" style="font-size:30px">TegraExplorer</a>
-        </br>
-        </br>
-        <a href="https://github.com/Atmosphere-NX/Atmosphere/releases" style="font-size:30px">Atmosphere</a>
-        </br>
-        </br>
-        <a href="https://github.com/shchmue/Lockpick_RCM/releases" style="font-size:30px">Lockpick RCM</a>
-        </br>
-        </br>
-        <a href="https://github.com/mtheall/ftpd/releases" style="font-size:30px">FTPD</a>
-        </br>
-        </br>
-        <a href="https://github.com/J-D-K/JKSV/releases" style="font-size:30px">JKSV</a>
-        </br>
-        </br>
-        <a href="https://github.com/exelix11/SwitchThemeInjector/releases" style="font-size:30px">NXThemesInstaller</a>
-        </br>
-        </br>
-        <a href="https://github.com/joel16/NX-Shell/releases" style="font-size:30px">NX-Shell</a>
-        </br>
-        </br>
-        <a href="https://github.com/fortheusers/hb-appstore/releases" style="font-size:30px">Homebrew App Store</a>
-        </br>
-        </br>
         
+        <details>
+            <summary style="font-size:30px">Software Releases</summary>
+            </br>
+            <a href="https://github.com/eliboa/TegraRcmGUI/releases" style="font-size:30px">TegraRcmGUI</a>
+            </br>
+            </br>
+            <a href="https://github.com/CTCaer/hekate/releases/" style="font-size:30px">Hekate</a>
+            </br>
+            </br>
+            <a href="https://github.com/suchmememanyskill/TegraExplorer/releases" style="font-size:30px">TegraExplorer</a>
+            </br>
+            </br>
+            <a href="https://github.com/Atmosphere-NX/Atmosphere/releases" style="font-size:30px">Atmosphere</a>
+            </br>
+            </br>
+            <a href="https://github.com/shchmue/Lockpick_RCM/releases" style="font-size:30px">Lockpick RCM</a>
+            </br>
+            </br>
+            <a href="https://github.com/mtheall/ftpd/releases" style="font-size:30px">FTPD</a>
+            </br>
+            </br>
+            <a href="https://github.com/J-D-K/JKSV/releases" style="font-size:30px">JKSV</a>
+            </br>
+            </br>
+            <a href="https://github.com/exelix11/SwitchThemeInjector/releases" style="font-size:30px">NXThemesInstaller</a>
+            </br>
+            </br>
+            <a href="https://github.com/joel16/NX-Shell/releases" style="font-size:30px">NX-Shell</a>
+            </br>
+            </br>
+            <a href="https://github.com/fortheusers/hb-appstore/releases" style="font-size:30px">Homebrew App Store</a>
+            </br>
+            </br>
+            <a href="https://sigmapatches.coomer.party/" style="font-size:30px">Sigpatches</a>
+            </br>
+            </br>
+        </details>
         <!-- <p style="font-size:30px">Coming soon...</p> -->
       </div>
     </div>
