Added Boot9Strap Link

--- a/nintymodscene/files/index.html
+++ b/nintymodscene/files/index.html
@@ -67,6 +67,9 @@
             <a href="https://github.com/derrekr/fastboot3DS/releases" style="font-size:30px">fastboot3DS</a>
             </br>
             </br>
+            <a href="https://github.com/SciresM/boot9strap/releases" style="font-size:30px">Boot9Strap</a>
+            </br>
+            </br>
           </details>
       </div>
       <div class="column" style="background-color:#E3E3E3;">
