--- a/nintymodscene/files/index.html
+++ b/nintymodscene/files/index.html
@@ -24,13 +24,13 @@
   </style>
  </head>
  
- <body>
+ <body style="background-color:#FF8383;">
   <h2 style="font-size:40px"><u><b><center>Files</center></b></u></h2>
   
     <div class="row">
       <div class="column" style="background-color:#EAEAEA;">
-        <h2 style="font-size:27px"><center>3DS</center></h2>
-        
+          <h2 style="font-size:27px"><center>3DS</center></h2>
+          
           <details>
             <summary style="font-size:30px">Software Releases</summary>
             </br>
